--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--externos-->
     <!--Tailwind-->
-    <link href="../output.css" rel="stylesheet" />
+    <link href="/src/output.css" rel="stylesheet" />
     <!--Srip de flowbite para que sirva la barra nav con menu desplegable-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
@@ -105,16 +105,16 @@
                         </div>
                     </li>
                     <li>
-                        <a href="postNews.html"
+                        <a href="/src/pages/postNews.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
                             & News</a>
                     </li>
                     <li>
-                        <a href="tour.html"
+                        <a href="/src/pages/tour.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tour</a>
                     </li>
                     <li>
-                        <a href="aboutUs.html"
+                        <a href="/src/pages/aboutUs.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
                             Us</a>
                     </li>
@@ -161,8 +161,8 @@
                             class="rounded-md bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium text-sm px-3.5 py-2.5 text-gray-900 shadow-sm hover:bg-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
                             Sign In
                         </a>
-                        <a href="aboutHer.html" class="text-sm/6 font-semibold text-white">Explore Her Story <span
-                                aria-hidden="true">→</span></a>
+                        <a href="/src/pages/aboutHer.html" class="text-sm/6 font-semibold text-white">Explore Her Story
+                            <span aria-hidden="true">→</span></a>
                     </div>
                 </div>
 
