--- a/src/pages/tour.html
+++ b/src/pages/tour.html
@@ -21,7 +21,7 @@
 
     <nav class="sticky top-0 z-50 bg-white border-gray-200  dark:border-gray-700 nav-animated-bg">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+            <a href="/index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="/src/assets/img/logoBarra.svg" class="h-8" alt="Billie Eilish Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Eilish Vibes</span>
             </a>
@@ -39,7 +39,7 @@
                 <ul
                     class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-transparent md:dark:bg-transparent dark:border-gray-700">
                     <li>
-                        <a href="index.html"
+                        <a href="/index.html"
                             class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent"
                             aria-current="page">Home</a>
                     </li>
@@ -57,7 +57,7 @@
                         <div id="dropdownNavbar"
                             class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow w-44 nav-animated-bg dark:divide-white">
                             <div class="py-1">
-                                <a href="store.html"
+                                <a href="/src/pages/store.html"
                                     class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">All
                                     Categories</a>
                             </div>
@@ -105,16 +105,16 @@
                         </div>
                     </li>
                     <li>
-                        <a href="postNews.html"
+                        <a href="/src/pages/postNews.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
                             & News</a>
                     </li>
                     <li>
-                        <a href="tour.html"
+                        <a href="/src/pages/tour.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Tour</a>
                     </li>
                     <li>
-                        <a href="aboutUs.html"
+                        <a href="/src/pages/aboutUs.html"
                             class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About
                             Us</a>
                     </li>
