--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -139,7 +139,7 @@
                     <div class="w-full flex-col justify-start lg:items-start items-center gap-4 flex">
                         <h2
                             class="text-gray-900 text-4xl font-bold font-manrope leading-normal lg:text-start text-center">
-                            Building Stronger Communities through Collaboration and Empowerment</h2>
+                            comprobando</h2>
                         <p class="text-white text-base font-normal leading-relaxed lg:text-start text-center">Through
                             collaborationperse perspectives and strengths are leveraged to create inclusive environments
                             where everyone has the opportunity to thrive. This approach not only fosters personal growth
