--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--externos-->
     <!--Tailwind-->
-    <link href="/src/output.css" rel="stylesheet" />
+    <link href="src/output.css" rel="stylesheet" />
     <!--Srip de flowbite para que sirva la barra nav con menu desplegable-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
