veamos que pasa

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--externos-->
     <!--Tailwind-->
-    <link href="/src/output.css" rel="stylesheet" />
+    <link href="/output.css" rel="stylesheet" />
     <!--Srip de flowbite para que sirva la barra nav con menu desplegable-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
     <!--internos-->
-    <!-- <link rel="stylesheet" href="/src/css/fondoPagina.css" /> -->
+    <link rel="stylesheet" href="/src/css/fondoPagina.css" />
     <link rel="icon" href="/src/assets/img/pageIcon.svg" />
     <title>Eilish Vibes</title>
 </head>
