--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--externos-->
     <!--Tailwind-->
-    <link href="/output.css" rel="stylesheet" />
+    <link href="./src/output.css" rel="stylesheet" />
     <!--Srip de flowbite para que sirva la barra nav con menu desplegable-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
@@ -137,18 +137,7 @@
         <div class="mx-auto max-w-7xl py-5 sm:px-6 sm:py-0 lg:px-8">
             <div
                 class="fondito relative isolate overflow-hidden  px-6 pt-16  sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
-                <svg viewBox="0 0 1024 1024"
-                    class="absolute left-1/2 top-1/2 -z-10 size-[64rem] -translate-y-1/2 [mask-image:radial-gradient(closest-side,white,transparent)] sm:left-full sm:-ml-80 lg:left-1/2 lg:ml-0 lg:-translate-x-1/2 lg:translate-y-0"
-                    aria-hidden="true">
-                    <circle cx="512" cy="512" r="512" fill="url(#759c1415-0410-454c-8f7c-9a820de03641)"
-                        fill-opacity="0.7" />
-                    <defs>
-                        <radialGradient id="759c1415-0410-454c-8f7c-9a820de03641">
-                            <stop stop-color="#7775D6" />
-                            <stop offset="1" stop-color="#E935C1" />
-                        </radialGradient>
-                    </defs>
-                </svg>
+
                 <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-10 lg:text-left ">
                     <h2 class="text-balance text-3xl font-bold tracking-tight text-white sm:text-4xl">Welcome To The
                         Best Bebsite Of Billie Eilish.</h2>
