arreglando fodo animado

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
 
     <!--internos-->
+    <link rel="stylesheet" href="/src/css/index.css">
     <link rel="stylesheet" href="/src/css/fondoPagina.css" />
     <link rel="icon" href="/src/assets/img/pageIcon.svg" />
     <title>Eilish Vibes</title>
