--- a/src/pages/tour.html
+++ b/src/pages/tour.html
@@ -64,39 +64,39 @@
                             <ul class="py-2 text-sm text-gray-700 dark:text-gray-400"
                                 aria-labelledby="dropdownLargeButton">
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#normalVinyl"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Normal
                                         Vinyl</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#limitedEditionVinyl"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Limited
                                         Edition Vinyl</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#misteryBoxs"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Mistery
                                         Boxs(Only Holidays)</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#hoddies"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Hoodies</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#oversideTshirst"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Overside
                                         T-shirts</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#necklaces"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Necklaces</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#shoes"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Shoes</a>
                                 </li>
                                 <li>
-                                    <a href="#"
+                                    <a href="/src/pages/store.html#signedThings"
                                         class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Signed
                                         Things</a>
                                 </li>
