--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -105,8 +105,7 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
-                            & News</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
@@ -137,20 +136,24 @@
                 <div class="w-full flex-col justify-start lg:items-start items-center gap-10 inline-flex">
                     <div class="w-full flex-col justify-start lg:items-start items-center gap-4 flex">
                         <h2
-                            class="text-gray-900 text-4xl font-bold font-manrope leading-normal lg:text-start text-center">
-                            comprobando</h2>
-                        <p class="text-white text-base font-normal leading-relaxed lg:text-start text-center">Through
-                            collaborationperse perspectives and strengths are leveraged to create inclusive environments
-                            where everyone has the opportunity to thrive. This approach not only fosters personal growth
-                            and achievement but also strengthens the fabric of society.</p>
+                            class="text-cyan-200 text-4xl font-bold font-manrope leading-normal lg:text-start text-center">
+                            About Us</h2>
+                        <p class="text-white text-base font-normal leading-relaxed lg:text-start text-center">
+                            <span class="font-bold">Eilish
+                                Vibes</span> es una página diseñada para todos los fans o personas interesadas en
+                            conocer más
+                            acerca de Billie Eilish, ya que tenemos varias secciones relacionadas a la artista, una de
+                            las mejores secciones que tenemos es la de Tienda en la cual vendemos productos de la más
+                            alta calidad.
+                        </p>
                     </div>
-                    <button
-                        class="sm:w-fit w-full px-3.5 py-2 bg-indigo-600 hover:bg-indigo-800 transition-all duration-700 ease-in-out rounded-lg shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] justify-center items-center flex">
-                        <span class="px-1.5 text-white text-sm font-medium leading-6">Get Started</span>
-                    </button>
+                    <a href="/index.html"
+                        class="rounded-md bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium text-sm px-3.5 py-2.5 text-white shadow-sm hover:bg-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
+                        Empezar
+                    </a>
                 </div>
-                <img class="lg:mx-0 mx-auto h-full rounded-3xl object-cover"
-                    src="https://pagedone.io/asset/uploads/1717751272.png" alt="about Us image" />
+                <img class="lg:mx-0 mx-auto h-full rounded-3xl object-cover" src="/src/assets/img/logoEmpresa.jpg"
+                    alt="about Us image" />
             </div>
         </div>
     </section>
