--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
-                            & News</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
@@ -140,18 +139,18 @@
                 class="fondito relative isolate overflow-hidden  px-6 pt-16  sm:rounded-3xl sm:px-16 md:pt-24 lg:flex lg:gap-x-20 lg:px-24 lg:pt-0">
 
                 <div class="mx-auto max-w-md text-center lg:mx-0 lg:flex-auto lg:py-10 lg:text-left ">
-                    <h2 class="text-balance text-3xl font-bold tracking-tight text-white sm:text-4xl">Welcome To The
+                    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 sm:text-4xl">Welcome To The
                         Best Bebsite Of Billie Eilish.</h2>
-                    <p class="mt-6 text-pretty text-lg/8 text-white">Bienvenidos a Eilish Vibes 🩵✨ El lugar donde
+                    <p class="mt-6  text-lg/8 text-white font-semibold">Bienvenidos a Eilish Vibes 🩵✨ El lugar donde
                         los fanáticos de Billie Eilish se sumergen en su mundo único. Aquí encontrarás las últimas
                         noticias, souvenirs, tours,historia y todo lo que te hace sentir más conectado con Billie.</p>
-                    <p class="font-bold mt-6 text-pretty text-lg/8 text-white">¿Listo para comenzar?</p>
+                    <p class="font-bold mt-6  text-lg/8 text-white">¿Listo para comenzar?</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6 lg:justify-start">
                         <a href="#"
                             class="rounded-md bg-gradient-to-r from-teal-400 via-teal-500 to-teal-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-teal-300 dark:focus:ring-teal-800 font-medium text-sm px-3.5 py-2.5 text-gray-900 shadow-sm hover:bg-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
                             Sign In
                         </a>
-                        <a href="/src/pages/aboutHer.html" class="text-sm/6 font-semibold text-white">Explore Her Story
+                        <a href="/src/pages/aboutHer.html" class="text-sm/6 font-bold text-white">Explore Her Story
                             <span aria-hidden="true">→</span></a>
                     </div>
                 </div>
@@ -165,7 +164,7 @@
     <!--Nuevos Productos-->
     <div class="nav-animated-bg">
         <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
-            <h2 class="text-2xl  text-white">New Products</h2>
+            <h2 class="text-2xl  text-red-600">New Products</h2>
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
@@ -289,7 +288,7 @@
     <!--Productos populares-->
     <div class="nav-animated-bg">
         <div class="mx-auto max-w-2xl px-4 py-4 sm:px-6 sm:py-4 lg:max-w-7xl lg:px-8">
-            <h2 class="text-2xl text-white">Popular Products</h2>
+            <h2 class="text-2xl text-red-600">Popular Products</h2>
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
