--- a/src/pages/aboutHer.html
+++ b/src/pages/aboutHer.html
@@ -107,8 +107,7 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
-                            & News</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
