--- a/src/pages/store.html
+++ b/src/pages/store.html
@@ -107,8 +107,7 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
-                            & News</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
@@ -132,9 +131,10 @@
         </div>
     </nav>
     <!--normal vinily-->
+    <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4">Billie Eilish Store </h2>
     <div class="font-[sans-serif] nav-animated">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="normalVinyl" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">
+            <h2 id="normalVinyl" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
                 Normal Vinyl</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -228,7 +228,7 @@
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
             <h2 id="limitedEditionVinyl"
-                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">Limited
+                class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Limited
                 Edition Vinyl</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -321,7 +321,7 @@
     <!--Mistery Box-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="misteryBoxs" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">
+            <h2 id="misteryBoxs" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
                 Mistery Boxs</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 max-xl:gap-3 gap-6">
@@ -393,7 +393,8 @@
     </div>
     <!--hoddies-->
     <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
-        <h2 id="hoddies" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">Hoddies</h2>
+        <h2 id="hoddies" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Hoddies
+        </h2>
 
         <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6">
             <div
@@ -567,7 +568,7 @@
     </div>
     <!--Overside t-shirts-->
     <div class="font-sans p-4 mx-auto lg:max-w-6xl md:max-w-4xl">
-        <h2 id="oversideTshirst" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">
+        <h2 id="oversideTshirst" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
             Overside T-shirts
         </h2>
 
@@ -744,7 +745,7 @@
     <!--necklaces-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class="p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="necklaces" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">
+            <h2 id="necklaces" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
                 Necklaces</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
@@ -837,7 +838,8 @@
     <!--Shoes-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="shoes" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">Shoes</h2>
+            <h2 id="shoes" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">Shoes
+            </h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
                 <div class="bg-transparent rounded p-4 cursor-pointer hover:-translate-y-1 transition-all relative">
@@ -1013,7 +1015,7 @@
     <!--signed Things-->
     <div class="font-[sans-serif] nav-animated-bg">
         <div class=" p-4 mx-auto lg:max-w-7xl md:max-w-4xl sm:max-w-xl max-sm:max-w-sm">
-            <h2 id="signedThings" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-white mb-6 sm:mb-10">
+            <h2 id="signedThings" class="ajustarScroll text-2xl sm:text-3xl font-extrabold text-red-600 mb-6 sm:mb-10">
                 Signed Things</h2>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 max-xl:gap-4 gap-6">
