--- a/src/pages/tour.html
+++ b/src/pages/tour.html
@@ -106,8 +106,7 @@
                     </li>
                     <li>
                         <a href="/src/pages/postNews.html"
-                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Post
-                            & News</a>
+                            class="block py-2 px-3 text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">News</a>
                     </li>
                     <li>
                         <a href="/src/pages/tour.html"
@@ -130,6 +129,78 @@
             </button>
         </div>
     </nav>
+    <div class="max-w-screen-xl mx-auto">
+        <img src="/src/assets/img/tourImg.jpg" class="h-auto max-w-full" alt="tourImg" />
+    </div>
+
+
+    <!--tours-->
+    <div class="max-w-screen-xl mx-auto p-4 py-6 lg:py-8">
+        <h2 class=" text-3xl font-bold tracking-tight text-cyan-200 text-center sm:text-4xl p-4">Dates & Places</h2>
+        <ul role="list" class="divide-y divide-gray-100">
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex  min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/473d6e1a-6ceb-4973-ada0-a68fdfb54d0e"
+                            class="text-3xl font-bold text-white">Feb 18, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
+
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/802ac97a-89db-4792-b49f-fda20818c512"
+                            class="text-3xl font-bold text-white">Feb 19, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/bd4823d3-d485-43b6-a09a-e32c02aaf976"
+                            class="text-3xl font-bold text-white">Feb 21, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/bd4823d3-d485-43b6-a09a-e32c02aaf976"
+                            class="text-3xl font-bold text-white">Feb 22, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Brisbane Entertainment Centre</p>
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/8a9d0a5e-9e74-4a10-8881-caba62095a77"
+                            class="text-3xl font-bold text-white">Feb 24, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
+                    </div>
+                </div>
+            </li>
+            <li class="flex justify-normal gap-x-6 py-5">
+                <div class="flex min-w-0 gap-x-4">
+
+                    <div class="min-w-0 flex-auto">
+                        <a target="_blank" href="https://go.seated.com/tour-events/b901dbdc-6cd2-41ab-a4fa-e203e1a68f3a"
+                            class="text-3xl font-bold text-white">Feb 25, 2025</a>
+                        <p class="mt-1 truncate text-2xl text-semibold text-gray-800">Qudos Bank Arena</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
 
     <!--Footer-->
 
