--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
-                    <img src="https://tailwindui.com/plus/img/ecommerce-images/category-page-04-image-card-01.jpg"
+                    <img src="https://store.billieeilish.com/cdn/shop/files/PRODUCT_BEIL_ECOM_HOLIDAY_24_ER_BLOHSHBLUEORNAMENT.png?v=1731523520&width=600"
                         alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
                         class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Earthen Bottle</h3>
