poniendo alt en index

--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/shoe8.webp"
-                        alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+                    <img src="/src/assets/img/productos/shoe8.webp" alt="nuevo producto 1"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Shoelaces</h3>
                     <p class="mt-1 text-lg font-medium text-white">$10.00</p>
@@ -183,8 +182,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/neck4.webp"
-                        alt="Olive drab green insulated bottle with flared screw lid and flat top."
+                    <img src="/src/assets/img/productos/neck4.webp" alt="nuevo producto 2"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Blosh Ornament</h3>
                     <p class="mt-1 text-lg font-medium text-white">$28.00</p>
@@ -198,8 +196,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/hodd1.webp"
-                        alt="Person using a pen to cross a task off a productivity paper card."
+                    <img src="/src/assets/img/productos/hodd1.webp" alt="nuevo producto 3"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Billie 23 Zip Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$110.00</p>
@@ -213,8 +210,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/hodd2.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/hodd2.webp" alt="nuevo producto 4"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT WORLD
                         TOUR Pullover Hoodie</h3>
@@ -231,8 +227,7 @@
 
                 <a href="#" class="group">
 
-                    <img src="/src/assets/img/productos/hodd3.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/hodd3.webp" alt="nuevo producto 5"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Black Cover Pullover Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$100.00</p>
@@ -246,8 +241,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/hodd4.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/hodd4.webp" alt="nuevo producto 6"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Grey Zipper Hoodie</h3>
                     <p class="mt-1 text-lg font-medium text-white">$110.00</p>
@@ -261,8 +255,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/ov1.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/ov1.webp" alt="nuevo producto 7"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Tour Tee</h3>
                     <p class="mt-1 text-lg font-medium text-white">$45.00</p>
@@ -276,8 +269,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/ov2.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/ov2.webp" alt="nuevo producto 8"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Admat Poster Tee</h3>
                     <p class="mt-1 text-lg font-medium text-white">$45.00</p>
@@ -301,8 +293,7 @@
             <br>
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/neck1.webp"
-                        alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+                    <img src="/src/assets/img/productos/neck1.webp" alt="producto popular 1"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HMHAS Blue Necklace</h3>
                     <p class="mt-1 text-lg font-medium text-white">$60.00</p>
@@ -317,8 +308,7 @@
 
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/neck3.webp"
-                        alt="Olive drab green insulated bottle with flared screw lid and flat top."
+                    <img src="/src/assets/img/productos/neck3.webp" alt="producto popular 2"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Blohsh Die Cut Dogtag</h3>
                     <p class="mt-1 text-lg font-medium text-white">$75.00</p>
@@ -332,8 +322,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/normalvinyl4.webp"
-                        alt="Person using a pen to cross a task off a productivity paper card."
+                    <img src="/src/assets/img/productos/normalvinyl4.webp" alt="producto popular 3"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Standard Vinyl</h3>
                     <p class="mt-1 text-lg font-medium text-white">$33.00</p>
@@ -347,8 +336,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/normalvinyl3.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/normalvinyl3.webp" alt="producto popular 4"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">'Happier Than Ever' Vinyl Color Black</h3>
                     <p class="mt-1 text-lg font-medium text-white">$35.00</p>
@@ -362,8 +350,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/signed1.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/signed1.webp" alt="producto popular 5"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Excl. Signed CD</h3>
                     <p class="mt-1 text-lg font-medium text-white">$140.00</p>
@@ -377,8 +364,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/signed2.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/signed2.webp" alt="producto popular 6"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">HIT ME HARD AND SOFT Excl. Signed Vinyl</h3>
                     <p class="mt-1 text-lg font-medium text-white">$120.00</p>
@@ -392,8 +378,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/shoe7.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/shoe7.webp" alt="producto popular 7"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Billie Eilish x Air Jordan 1 KO</h3>
                     <p class="mt-1 text-lg font-medium text-white">$170.00</p>
@@ -407,8 +392,7 @@
                     </button>
                 </a>
                 <a href="#" class="group">
-                    <img src="/src/assets/img/productos/shoe1.webp"
-                        alt="Hand holding black machined steel mechanical pencil with brass tip and top."
+                    <img src="/src/assets/img/productos/shoe1.webp" alt="producto popular 8"
                         class="aspect-square w-full rounded-lg bg-transparent object-cover group-hover:opacity-75 xl:aspect-[7/8]">
                     <h3 class="mt-4 text-sm text-white">Nike x Billie Eilish Air Alpha Force 88 Fire Red</h3>
                     <p class="mt-1 text-lg font-medium text-white">$130.00</p>
